# pyleague

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: CI.yml  test.yml
pyleague/: __init__.py  __main__.py  league.py  parser.py  rounds.py
tests/: example.md  test_league.py  test_main.py  test_match.py  test_parser.py  test_rounds.py
