[tool.poetry]
name = "pyleague"
version = "0.1.0"
description = ""
authors = ["Fernando Miguel Hahne <fernandomhahne@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-frontmatter = "^1.1.0"
typer = "^0.12.0"
rich = "^13.7.1"

[tool.poetry.group.dev.dependencies]
hypothesis = "^6.100.0"
mypy = "^1.9.0"
pytest = "^8.1.1"
pytest-cov = "^5.0.0"
ruff = "^0.3.4"
pre-commit = "^3.7.0"

[tool.poetry.scripts]
pyleague = "pyleague.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true

[tool.ruff]
extend-select = ["I", "PL"]
extend-ignore = ["PLR2004"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
