[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyleague"
version = "0.1.0"
description = "Generate pairings and standings of round-robin leagues"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "Fernando Miguel Hahne", email = "fernandomhahne@gmail.com" },
]
dependencies = [
  "python-frontmatter ~=1.1",
  "rich ~=13.7",
  "typer ~=0.12",
]

[tool.hatch.envs.hatch-test]
extra-dependencies = [
  "pytest ~=8.2.1",
  "hypothesis ~=6.103"
]

[tool.mypy]
ignore_missing_imports = true

[tool.ruff]
extend-select = ["I", "PL"]
extend-ignore = ["PLR2004"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
